@@ -919,6 +919,9 @@ bool Arithmetic::isInteger(Object n)
 
 bool Arithmetic::isRealValued(Object n)
 {
+    if (!n.isNumber()) {
+        LOG1("{{~a}}", n);
+    }
     MOSH_ASSERT(n.isNumber());
     if (n.isReal()) {
         return true;
